// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select-feild/SelectField should render properly for multi select field 1`] = `
<MultiSelectField
  error={null}
  label="Enter things"
  name="toggle"
  onBlur="onblur"
  onChange={[Function]}
  selectedValues="value"
  value="value"
/>
`;

exports[`components/select-feild/SelectField should render properly for single select field 1`] = `
<SingleSelectField
  error={null}
  label="Enter things"
  name="toggle"
  onBlur="onblur"
  onChange={[Function]}
  selectedValue="value"
  value="value"
/>
`;
